# knowledge-finder-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml  run_agentplayground.ps1  run_bot.ps1  run_devtunnel.ps1
.agent/: README.md
.agent/memory/: creating_claude_skills.md  decisions.md  dependencies.md  project_status.md  project_structure.md
.agent/rules/: coding_patterns.md
.claude/: config.json  hookify.detect-completion.local.md
.claude/memory/: MEMORY.md  azure-config.md  creating-local-skills.md  debugging.md  decisions.md  dependencies.md  patterns.md  project-structure.md
config/: acl.yaml
docs/: architecture.md  contributing.md  deployment.md  langchain_langgraph_analysis.md  setup.md
docs/plans/: 2025-02-09-m365-agents-migration-plan.md  2025-02-09-m365-agents-migration.md  2025-02-09-notebooklm-chatbot-advanced.md  2025-02-09-notebooklm-chatbot-basic.md  2025-02-10-acl-mechanism.md  2025-02-10-end-to-end-streaming.md  2025-02-10-nlm-proxy-integration.md  2025-02-11-auto-documentation-system.md  2025-02-11-clean-streaming-display.md  azure-app-registration-guide.md  notebooklm-chatbot-design.md  (+1 more)
scripts/: dev-setup.ps1  dev-setup.sh  install-plugins.ps1  install-plugins.sh
tests/: __init__.py  conftest.py  test_acl_models.py  test_acl_service.py  test_auth_config.py  test_bot.py  test_bot_nlm.py  test_config.py  test_formatter.py  test_graph_client.py  test_logging.py  test_mock_graph_client.py  test_nlm_client.py  test_nlm_formatter.py  test_nlm_memory.py  test_nlm_prompts.py  test_nlm_session.py  test_nlm_streaming.py
(+24 files in other folders)
